--- a/scss/sections/benefits/_index.scss
+++ b/scss/sections/benefits/_index.scss
@@ -21,8 +21,8 @@
 
   &-description {
     line-height: 26px;
-    padding-bottom: 40px;
-    margin-bottom: 40px;
+    padding-bottom: 20px;
+    margin-bottom: 50px;
     border-bottom: 1px solid rgba(108, 108, 108, 0.15);
   }
 
@@ -32,6 +32,13 @@
     gap: 53px;
   }
 
+  &-pains,
+  &-gains {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: max-content 0.5fr 1fr;
+  }
+
   &-list {
     display: grid;
     gap: 20px;
@@ -39,8 +46,9 @@
     .list {
       &-item {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 53px;
+        align-items: center;
+        grid-template-columns: max-content 1fr;
+        gap: 20px;
       }
 
       &-icon {
