--- a/scss/sections/trusted/_index.scss
+++ b/scss/sections/trusted/_index.scss
@@ -1,5 +1,5 @@
 .trusted {
-  padding: 100px 0 93px;
+  padding-bottom: 93px;
 
   &-title {
     color: #343289;
@@ -15,7 +15,7 @@
     filter: grayscale(1);
   }
 
-  .swiper-wrapper{ 
+  .swiper-wrapper {
     align-items: center;
   }
 
