--- a/scss/components/btn/_responsive.scss
+++ b/scss/components/btn/_responsive.scss
@@ -1,13 +1,31 @@
-@media (max-width: 1120px) {
+@media (max-width: 1200px) {
   .btn {
     padding-top: 15px;
     padding-bottom: 15px;
+
+    &.btn--service {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      font-size: 15px;
+    }
   }
 }
 
-@media (max-width: 410px) {
+@media (max-width: 768px) {
   .btn {
     padding-left: 25px;
     padding-right: 25px;
+  }
+}
+
+@media (max-width: 420px) {
+  .btn {
+    font-size: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .btn.btn--service {
+    font-size: 12px
   }
 }
