--- a/scss/components/title/_responsive.scss
+++ b/scss/components/title/_responsive.scss
@@ -1,26 +1,33 @@
-@media (max-width: 1120px) {
+@media (max-width: 950px) {
+  .read .title,
   .title {
-    font-size: 36px;
-    margin-bottom: 40px;
-  }
-}
-
-@media (max-width: 800px) {
-  .title {
-    font-size: 36px;
-    margin-bottom: 40px;
-  }
-}
-
-@media (max-width: 768px) {
-  .title {
-    font-size: 27px;
+    font-size: 32px;
     margin-bottom: 20px;
+
+    &.title--free {
+      margin-bottom: 20px;
+    }
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 850px) {
+  .read .title,
   .title {
-    font-size: 19px;
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 666px) {
+  .read .title,
+  .title {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 420px) {
+  .read .title,
+  .title,
+  .title.title--free {
+    font-size: 18px;
   }
 }
