--- a/scss/sections/benefits/_index.scss
+++ b/scss/sections/benefits/_index.scss
@@ -1,5 +1,4 @@
 .benefits {
-  padding: 100px 0;
   background-color: #f8f8f8;
 
   .description {
@@ -18,6 +17,9 @@
     font-size: 26px;
     font-weight: 600;
     margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   &-description {
@@ -33,8 +35,13 @@
     gap: 53px;
   }
 
-  &-pains,
-  &-gains {
+  &-icon {
+    width: 30px;
+    height: 30px;
+    display: none;
+  }
+
+  &-item {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: max-content 0.5fr 1fr;
