--- a/scss/sections/trusted/_responsive.scss
+++ b/scss/sections/trusted/_responsive.scss
@@ -1,6 +1,34 @@
+@media (max-width: 1050px) {
+  .trusted {
+    &-title {
+      color: #343289;
+      text-align: center;
+      font-size: 26px;
+      font-weight: 600;
+      line-height: 30px;
+      text-transform: uppercase;
+      margin-bottom: 68px;
+    }
+
+    &-image {
+      filter: grayscale(1);
+      width: 120px;
+    }
+
+    .swiper-wrapper {
+      align-items: center;
+    }
+
+    .swiper-slide {
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .trusted {
-    padding: 50px 0;
+    padding-bottom: 50px;
 
     &-title {
       font-size: 22px;
@@ -9,23 +37,26 @@
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
   .trusted {
-    padding: 40px 0;
-
-    &-title {
-      font-size: 18px;
-      line-height: normal;
-      margin-bottom: 30px;
+    &-image {
+      width: 100px;
     }
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 420px) {
   .trusted {
+    padding-bottom: 40px;
+
     &-title {
       font-size: 16px;
+      line-height: normal;
       margin-bottom: 20px;
+    }
+
+    &-image {
+      width: 80px;
     }
   }
 }
