--- a/scss/sections/features/_index.scss
+++ b/scss/sections/features/_index.scss
@@ -33,8 +33,12 @@
   }
 
   &-row {
-    display: grid;
     grid-template-columns: 1fr 340px;
     gap: 60px;
+    display: none;
+  }
+
+  &-row.features-row--show {
+    display: grid;
   }
 }
